Start of Data preprocessing part in TAsk 2

--- a/AnudaTelco.ipynb
+++ b/AnudaTelco.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "16zM3lMkOcPcGa8CG4qT-nE82PTblGeVr",
-      "authorship_tag": "ABX9TyOYtniUA3ndQZYegtZ6X2rc",
+      "authorship_tag": "ABX9TyNnNBG0D3ajfiafiRTwrTyh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2743,10 +2743,93 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "TASK 2"
+      ],
+      "metadata": {
+        "id": "qkUP-CDMHCZu"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 1. Create a copy of the dataset\n",
+        "df_model = df.copy()"
+      ],
       "metadata": {
         "id": "yNJka6AcWQ7M"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 2. Encode target variable explicitly\n",
+        "df_model['Churn'] = df_model['Churn'].map({'Yes': 1, 'No': 0})"
+      ],
+      "metadata": {
+        "id": "TwziTZcVIhFw"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 3. Encode binary categorical columns (Yes/No)\n",
+        "binary_cols = [\n",
+        "    'gender', 'HasPartner', 'HasDependents', 'HasPhoneService',\n",
+        "    'HasMultipleLines', 'HasOnlineSecurity', 'HasOnlineBackup',\n",
+        "    'HasDeviceProtection', 'HasTechSupport',\n",
+        "    'HasStreamingTV', 'HasStreamingMovies',\n",
+        "    'IsPaperlessBilling'\n",
+        "]"
+      ],
+      "metadata": {
+        "id": "JTSYCiYfIm0b"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for col in binary_cols:\n",
+        "    df_model[col] = df_model[col].map({'Yes': 1, 'No': 0, 'Male': 1, 'Female': 0})"
+      ],
+      "metadata": {
+        "id": "BA0LVJAlIoUU"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 4. One-Hot Encode remaining categorical features\n",
+        "df_model = pd.get_dummies(\n",
+        "    df_model,\n",
+        "    columns=['InternetService', 'Contract', 'PaymentMethod'],\n",
+        "    drop_first=True\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "A_5naFzKIoHK"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 5. Split features and target\n",
+        "X = df_model.drop('Churn', axis=1)\n",
+        "y = df_model['Churn']"
+      ],
+      "metadata": {
+        "id": "t_Jpvc4HIw96"
       },
       "execution_count": null,
       "outputs": []
