--- a/AnudaTelco.ipynb
+++ b/AnudaTelco.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "16zM3lMkOcPcGa8CG4qT-nE82PTblGeVr",
-      "authorship_tag": "ABX9TyPAVk310W4+/SYvqwhpyDcs",
+      "authorship_tag": "ABX9TyOSL6xWpKUD8Fzb9E+DJPA4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3521,12 +3521,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "7YJRRcmurmCq",
-        "outputId": "73a10ea1-9ab6-42f6-b1a6-732f3e058d9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
-        }
+        },
+        "id": "7YJRRcmurmCq",
+        "outputId": "73a10ea1-9ab6-42f6-b1a6-732f3e058d9c"
       },
       "execution_count": 102,
       "outputs": [
@@ -4822,6 +4822,36 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Task 3: AI Ethics and Post-Deployment Strategy\n",
+        "3.1 Ethical Considerations\n",
+        "Bias Mitigation and Fairness\n",
+        "In the beginning EDA exploratory data analysis is shows a significant class inbalance in the data set, approximately 73% customers classified as non churn and 26% classified as churn, So tariining a model with this inbalanced distribution with result in biased prediction that favor the majority class,leading the poor identification of customers at risk of churn\n",
+        "To adjust this issue the SMOTE (Synthetic Minority Over sampling Technique was used to\n",
+        " trainingdataset to balance class representation. In addition class weighting was incoparated.while the mode training to minimize the misclassification of minority class, so these strategies are helped to ensure the model learns equally from both churned and non chrued customer groups.\n",
+        "________________________________________\n",
+        "Data Privacy and Regulatory Compliance (GDPR)\n",
+        "Sensitive customer identifiers are excluded from tis modeling process to protect the individual privacy and reduce the data misuse , In a real-world deployment scenario, strict data privacy measures must be enforced to comply with General Data Protection Regulation (GDPR) requirements. All Personally Identifiable Information (PII), such as customer identifiers, must be removed or irreversibly anonymized through hashing before data is processed by the model.\n",
+        "Furthermore, access to the data and model predictions should be restricted to authorized personnel only, and data retention policies should be defined to ensure that customer information is not stored longer than necessary.\n",
+        "________________________________________\n",
+        "3.2 Post-Deployment Strategy\n",
+        "Model Monitoring and Data Drift Detection\n",
+        "Customer behavior and service usage patterns evolve over time, which can lead to data drift and a gradual degradation of model performance. To address this, a continuous monitoring system should be implemented to track the statistical distribution of key input features such as MonthlyCharges and CustomerDuration.\n",
+        "If significant deviations between live production data and the original training data are detected, automated alerts will trigger a model evaluation and retraining pipeline. This ensures that the predictive system remains accurate, reliable, and aligned with current customer behavior.\n",
+        "Deployment as continuous monitoring in model performance is very important to make sure the sustain accuracy and reliability. The Key performance metrics is must tracked continuously to identify the potential degradation.\n",
+        "In the future customer behavior, market conditions and service offerings might lead to data drift, so to address this the mechanism should be detect significant deviation between incoming data and original data, so when such drifts are identified the model should undergo systematic evaluation and retraining.\n",
+        "\n",
+        "________________________________________\n",
+        "Human-in-the-Loop Decision Making\n",
+        "To prevent inappropriate automated actions, a human-in-the-loop approach is incorporated into the deployment strategy. Predictions that fall within an uncertainty range specifically churn probabilities between 40% and 60%,are not acted upon automatically.\n",
+        "Instead, these cases are escalated to trained customer support agents for manual review. This approach reduces the risk of incorrectly targeting satisfied customers with unnecessary retention offers and ensures that final decisions incorporate human judgment alongside algorithmic recommendations.\n"
+      ],
+      "metadata": {
+        "id": "mILpDxv8dCkV"
+      }
     }
   ]
 }
