--- a/AnudaTelco.ipynb
+++ b/AnudaTelco.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "16zM3lMkOcPcGa8CG4qT-nE82PTblGeVr",
-      "authorship_tag": "ABX9TyOSL6xWpKUD8Fzb9E+DJPA4",
+      "authorship_tag": "ABX9TyOxJAcmQbWwes4II9yUpMOL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "ZhMhFlH4o8Fq"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
         "id": "V3Frx2H-pMyh",
         "outputId": "a0819131-d700-41f1-cc3c-c933f14618c7"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +98,7 @@
       "metadata": {
         "id": "Px7I2F0-xJN2"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -114,7 +114,7 @@
         "id": "rptgvM0lDRG1",
         "outputId": "ccf1c764-3dae-4b9a-a46b-8b9f781fe748"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
         "id": "IQgiGHLIwhEt",
         "outputId": "bae782b8-2adc-43c4-9389-fc1bec0630b3"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -579,7 +579,7 @@
         "id": "Qx52qX72vGsj",
         "outputId": "af875491-eb85-4a74-de54-bb1782f71cf3"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1022,7 +1022,7 @@
         "id": "sCaXlau1wj-a",
         "outputId": "ceba8a8d-907c-42d5-ab15-d5fe8e655a56"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1048,7 +1048,7 @@
         "id": "WFysTcg9xNaZ",
         "outputId": "6897594d-0046-44bd-9acd-32f40011dfa4"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1099,7 +1099,7 @@
         "id": "cfOf9fK15zZN",
         "outputId": "4cd38bf1-7a36-46bc-cf1d-c1ebed27f05b"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1257,7 +1257,7 @@
         "id": "MSxZCklGyIDj",
         "outputId": "e1429c49-6e29-451a-fd6a-97087b659c6e"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1284,7 +1284,7 @@
         "id": "u4V-wloZzKnF",
         "outputId": "020ffa06-7b16-45da-a002-dc5fb7a343fe"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1417,7 +1417,7 @@
       "metadata": {
         "id": "a7SDjKMhTV4W"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1428,7 +1428,7 @@
       "metadata": {
         "id": "JMX0W4SXFRXP"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1439,7 +1439,7 @@
       "metadata": {
         "id": "ncwcxqmrFepF"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1450,7 +1450,7 @@
       "metadata": {
         "id": "H25JV18hSV1j"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1469,7 +1469,7 @@
         "id": "mZ4WpkkzFvX3",
         "outputId": "1ce19ba6-8e52-412d-e3db-a5837983b642"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1541,7 +1541,7 @@
         "id": "0hNOelI_KBl_",
         "outputId": "298e5ec3-111c-42be-fc16-7b8f95eadcd3"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1858,7 +1858,7 @@
         "id": "GEIjsbjeLxql",
         "outputId": "413b9604-28cd-40c6-fea1-d6eb18c4b0e5"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2257,7 +2257,7 @@
         "id": "RBXwBlaHSpZ6",
         "outputId": "fa31ca2c-e48f-40d3-d9a3-5fe35f07a7a0"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2326,7 +2326,7 @@
         "id": "8ayGMdGSS65e",
         "outputId": "111209d9-451c-4c3b-b3e5-beaf802cc2a9"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2409,7 +2409,7 @@
         "id": "-8xeDA2XTC9J",
         "outputId": "7aad4f16-2ffa-4f7e-914c-eb4e69a0f53e"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2449,7 +2449,7 @@
         "id": "l6qlqfW1JhV-",
         "outputId": "f1db458e-5cfd-4dd6-c1bc-341bc398884a"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2484,6 +2484,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# New Section"
+      ],
+      "metadata": {
+        "id": "qGsY_HF_10Br"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Customer Duration vs Churn\n",
@@ -2509,7 +2518,7 @@
         "id": "zWXQ6mHdEtNC",
         "outputId": "9d2ac0a5-d1ce-4f07-e40a-be0a63dcb97f"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2576,7 +2585,7 @@
         "id": "_U5NojpebZ0d",
         "outputId": "a1fcc523-4ccb-471b-e011-84bb5ca4e102"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2652,7 +2661,7 @@
         "id": "Epwvdwh45yeQ",
         "outputId": "5bdefea4-329f-4a57-aa7b-73ef2a89be8d"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2687,7 +2696,7 @@
         "id": "i3pp2xtxVYxo",
         "outputId": "3837817a-5bf6-4583-826a-4e6be2258bdc"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2718,7 +2727,7 @@
         "id": "Wh4Tu5hoWOTH",
         "outputId": "93de7949-330f-4af5-f690-0412dd7754e5"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2784,7 +2793,7 @@
       "metadata": {
         "id": "BieeD2GPQ-YX"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2807,7 +2816,7 @@
       "metadata": {
         "id": "7Mt2Fjv5UJFJ"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2827,7 +2836,7 @@
       "metadata": {
         "id": "pYZfM4stUWDz"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2847,7 +2856,7 @@
       "metadata": {
         "id": "ORX71Y6WUbRa"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2870,7 +2879,7 @@
       "metadata": {
         "id": "Y3-3C2X6Ud7k"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2895,7 +2904,7 @@
       "metadata": {
         "id": "BtZl2LO_Un3E"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2926,7 +2935,7 @@
         "id": "kqIqq52WUneB",
         "outputId": "4aeaa8bd-5fe6-46c3-9277-d781fd3af6f2"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2974,7 +2983,7 @@
       "metadata": {
         "id": "sFSzeCYMa30Q"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3010,7 +3019,7 @@
         "id": "U3pCuJJTVG6b",
         "outputId": "a4e40a4a-183d-4f5f-a266-6f2c7910aa60"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3040,7 +3049,7 @@
         "id": "XrEv5uxqaxBj",
         "outputId": "1f611e9d-88ad-481a-f754-23f172c2b12b"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3528,7 +3537,7 @@
         "id": "7YJRRcmurmCq",
         "outputId": "73a10ea1-9ab6-42f6-b1a6-732f3e058d9c"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3573,7 +3582,7 @@
         "id": "4c0eFIL2bxq8",
         "outputId": "8b7e2e36-e55d-4f10-f862-6ee67b2f9dd0"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3618,7 +3627,7 @@
         "id": "zVjwPYd9VPiG",
         "outputId": "595e1cd1-2a5b-4564-aab0-34e4329936bf"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3677,7 +3686,7 @@
         "id": "wX7QByPWcF48",
         "outputId": "03fafe5f-9d82-48f7-ee68-7c822668fd20"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3718,7 +3727,7 @@
         "id": "HU81DUkbcdlV",
         "outputId": "a4267db4-86af-4165-9485-b7d43487ee27"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3759,7 +3768,7 @@
       "metadata": {
         "id": "19MuBy9bfxZA"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3770,7 +3779,7 @@
       "metadata": {
         "id": "hNnHtfuUc0m4"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3800,7 +3809,7 @@
         "id": "6cRPDCLlft6H",
         "outputId": "9d45be41-1aa7-4f4c-d6cf-fa20ff5276a3"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3920,7 +3929,7 @@
         "id": "HuN5UJzMf_8L",
         "outputId": "1a6e4e15-f3dc-4c19-dbe9-fbf177d203ad"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4060,7 +4069,7 @@
         "id": "ujP6Y7F4ha5p",
         "outputId": "c8472ef3-740e-4f86-f381-80f69e7461b6"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4105,7 +4114,7 @@
         "id": "OQTZpVr1hkeu",
         "outputId": "7a2daaad-73c8-4792-c823-52acc2edec3b"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4149,7 +4158,7 @@
         "id": "vgTylPIahruv",
         "outputId": "66f41bf8-1cd4-4c1b-9c87-d7013fe4e3fc"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4196,7 +4205,7 @@
         "id": "VZeHL_Q4h0oK",
         "outputId": "bd497efe-f245-43dd-f402-f88cf960908a"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4250,7 +4259,7 @@
         "id": "ln3Z8Gzeh5Fo",
         "outputId": "4abb2047-fc24-4c99-b4f4-236c471d2fce"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4289,7 +4298,7 @@
         "id": "h2sdGYKxiJm1",
         "outputId": "eb4b39c4-a805-442a-dba3-5c416c8289d6"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4332,7 +4341,7 @@
       "metadata": {
         "id": "zHu_KtEYvJO8"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4358,7 +4367,7 @@
         "id": "EUAUk8SjiOex",
         "outputId": "10bc7d2a-db74-4015-9ef2-9e975c40ed40"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4426,7 +4435,7 @@
         "id": "PxkAmSk0iZQv",
         "outputId": "502be15f-8a81-4c92-b327-96ff742d7920"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4809,7 +4818,7 @@
         "id": "n5nNs0AGixIm",
         "outputId": "b4e292bd-8a7d-479a-b9c3-8d4aa48ef623"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
