--- a/DiabetesRiskPrediction.ipynb
+++ b/DiabetesRiskPrediction.ipynb
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "evgytY4tTS-X"
       },
-      "execution_count": 1,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -69,18 +69,18 @@
       ],
       "metadata": {
         "id": "cdYZde_EOdS0",
-        "outputId": "76fb8f90-b3a5-495c-913c-6ffe5c4de8f7",
+        "outputId": "b1a31ab7-06df-410a-cdce-9deb52ce21c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -95,7 +95,7 @@
       "metadata": {
         "id": "eZxfspCeTDNJ"
       },
-      "execution_count": 3,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -115,9 +115,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "90ab9b9d-94f4-4e45-f4cc-053d62d65015"
+        "outputId": "1ba42069-6cd5-4c09-cd76-601205a04795"
       },
-      "execution_count": 4,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,9 +190,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fc221794-c7b9-4fd8-c2c4-ce6d90e30cb5"
+        "outputId": "2a6955fa-b563-43cd-abff-66a939f0d706"
       },
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,13 +249,13 @@
       ],
       "metadata": {
         "id": "ZVKyakbxixBl",
-        "outputId": "80d28c2b-3c7e-409e-e7af-55b913c9e1b2",
+        "outputId": "30f8ec6c-c24d-4a01-c15c-5dd424b3dee3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 647
         }
       },
-      "execution_count": 6,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -289,13 +289,13 @@
       ],
       "metadata": {
         "id": "rAVsxXKfjVLo",
-        "outputId": "9ed6d724-974c-4072-ba62-f93470bdb4e5",
+        "outputId": "b3cd8f1c-8a9f-46e2-e3d3-75bec036c64a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 522
         }
       },
-      "execution_count": 7,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -334,13 +334,13 @@
       ],
       "metadata": {
         "id": "inTJmeWMjev3",
-        "outputId": "6829cd33-1be9-40b8-d1d4-5e1e7510a518",
+        "outputId": "aa18550a-3bdf-4088-cc8f-41a8158800c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 522
         }
       },
-      "execution_count": 8,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -386,13 +386,13 @@
       ],
       "metadata": {
         "id": "YnwDrdOvkbT9",
-        "outputId": "77f9cb1d-2023-4d52-fc71-c30f7fc9a317",
+        "outputId": "54ebaa61-beaa-42db-c6a5-045c3cb8b7f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 487
+          "height": 522
         }
       },
-      "execution_count": 9,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -426,13 +426,13 @@
       ],
       "metadata": {
         "id": "yDy1zOmwkmAZ",
-        "outputId": "46bb63ae-b7af-4e0b-afbf-b1cf4981575a",
+        "outputId": "20ca4799-b23a-4fab-93ea-ebdd495e27ec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 956
         }
       },
-      "execution_count": 10,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -521,9 +521,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Tzb3mTyJ4S_n",
-        "outputId": "7146f328-8417-49a6-995e-dcd6c32c0e1c"
+        "outputId": "0dbea007-b086-41c4-ae32-138d0f2cb76c"
       },
-      "execution_count": 11,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -713,9 +713,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e272f3bf-30f6-4a43-bb48-795ebce4f010"
+        "outputId": "823440f7-4d58-4627-c8a0-b76102f39c28"
       },
-      "execution_count": 12,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -936,9 +936,9 @@
           "height": 1000
         },
         "id": "P49mC7Mcd0EN",
-        "outputId": "ab78a9cd-7658-4ceb-89c7-e53a5468803f"
+        "outputId": "5504d966-b28e-4924-8656-9fcda47c809f"
       },
-      "execution_count": 13,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1240,9 +1240,9 @@
           "height": 1000
         },
         "id": "lb_fMMuS2STj",
-        "outputId": "a2c01c79-3d26-4823-8b0c-843469f7542c"
+        "outputId": "5d8ee4ad-8c3d-4e60-b70a-73d799f6fd60"
       },
-      "execution_count": 14,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -1422,13 +1422,13 @@
       ],
       "metadata": {
         "id": "U9J9IgVFMC9e",
-        "outputId": "f6ef054e-3e94-4c74-bd2e-104c99de67a1",
+        "outputId": "f415f342-719f-4ba6-a8e5-36b5ca55d551",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
-      "execution_count": 15,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1555,68 +1555,116 @@
         "# 8. BEST MODEL ANALYSIS AND DEPLOYMENT\n",
         "# ============================================\n",
         "print(\"\\n\" + \"=\"*60)\n",
-        "print(\"8. BEST MODEL ANALYSIS\")\n",
+        "print(\"8. BEST MODEL ANALYSIS & DEPLOYMENT\")\n",
         "print(\"=\"*60)\n",
         "\n",
-        "# Identify best model\n",
-        "best_model_name = results_df.loc[results_df['Accuracy'].idxmax(), 'Model']\n",
+        "# --------------------------------------------\n",
+        "# SMART BEST MODEL SELECTION (Medical Priority)\n",
+        "# --------------------------------------------\n",
+        "\n",
+        "# Selection priority:\n",
+        "# Recall -> F1-Score -> ROC-AUC -> Accuracy\n",
+        "\n",
+        "best_row = results_df.sort_values(\n",
+        "    by=['Recall', 'F1-Score', 'ROC-AUC', 'Accuracy'],\n",
+        "    ascending=False\n",
+        ").iloc[0]\n",
+        "\n",
+        "best_model_name = best_row['Model']\n",
         "best_model = trained_models[best_model_name]\n",
-        "print(f\"\\nBest Model: {best_model_name}\")\n",
-        "print(f\"Accuracy: {results_df.loc[results_df['Accuracy'].idxmax(), 'Accuracy']:.4f}\")\n",
-        "print(f\"F1-Score: {results_df.loc[results_df['Accuracy'].idxmax(), 'F1-Score']:.4f}\")\n",
         "\n",
-        "# Cross-validation for best model\n",
-        "cv_scores = cross_val_score(best_model, X_train_scaled, y_train, cv=5, scoring='accuracy')\n",
+        "print(f\"\\nBest Model Selected: {best_model_name}\")\n",
+        "print(f\"Accuracy : {best_row['Accuracy']:.4f}\")\n",
+        "print(f\"Recall   : {best_row['Recall']:.4f}\")\n",
+        "print(f\"F1-Score : {best_row['F1-Score']:.4f}\")\n",
+        "print(f\"ROC-AUC  : {best_row['ROC-AUC']:.4f}\")\n",
+        "\n",
+        "# --------------------------------------------\n",
+        "# Cross Validation for Best Model\n",
+        "# --------------------------------------------\n",
+        "\n",
+        "cv_scores = cross_val_score(\n",
+        "    best_model, X_train_scaled, y_train, cv=5, scoring='recall'\n",
+        ")\n",
+        "\n",
         "print(f\"\\nCross-Validation Results for {best_model_name}:\")\n",
-        "print(f\"Scores: {cv_scores}\")\n",
-        "print(f\"Mean CV Accuracy: {cv_scores.mean():.4f} (+/- {cv_scores.std() * 2:.4f})\")\n",
+        "print(f\"Recall Scores: {cv_scores}\")\n",
+        "print(f\"Mean CV Recall: {cv_scores.mean():.4f} (+/- {cv_scores.std() * 2:.4f})\")\n",
         "\n",
-        "# Feature importance for best model\n",
+        "# --------------------------------------------\n",
+        "# Feature Importance (If Available)\n",
+        "# --------------------------------------------\n",
+        "\n",
         "if hasattr(best_model, 'feature_importances_'):\n",
-        "    print(\"\\n\" + \"-\"*40)\n",
+        "\n",
+        "    print(\"\\n\" + \"-\"*50)\n",
         "    print(\"FEATURE IMPORTANCE (Best Model)\")\n",
-        "    print(\"-\"*40)\n",
+        "    print(\"-\"*50)\n",
+        "\n",
         "    importances = best_model.feature_importances_\n",
+        "\n",
         "    feature_importance_df = pd.DataFrame({\n",
         "        'Feature': feature_names,\n",
         "        'Importance': importances\n",
-        "    }).sort_values('Importance', ascending=False)\n",
+        "    }).sort_values(by='Importance', ascending=False)\n",
         "\n",
         "    print(feature_importance_df)\n",
         "\n",
-        "    # Plot feature importance\n",
         "    plt.figure(figsize=(10, 6))\n",
-        "    bars = plt.barh(range(len(feature_importance_df)),\n",
-        "                    feature_importance_df['Importance'],\n",
-        "                    color='steelblue', edgecolor='black')\n",
-        "    plt.yticks(range(len(feature_importance_df)), feature_importance_df['Feature'])\n",
+        "    plt.barh(\n",
+        "        feature_importance_df['Feature'],\n",
+        "        feature_importance_df['Importance']\n",
+        "    )\n",
+        "    plt.gca().invert_yaxis()\n",
         "    plt.xlabel('Importance Score')\n",
-        "    plt.title(f'Feature Importance - {best_model_name}', fontsize=14, fontweight='bold')\n",
-        "    plt.grid(True, alpha=0.3, axis='x')\n",
-        "\n",
-        "    # Add value labels\n",
-        "    for i, (bar, imp) in enumerate(zip(bars, feature_importance_df['Importance'])):\n",
-        "        plt.text(bar.get_width() + 0.01, bar.get_y() + bar.get_height()/2,\n",
-        "                 f'{imp:.3f}', va='center', fontweight='bold')\n",
-        "\n",
+        "    plt.title(f'Feature Importance - {best_model_name}')\n",
+        "    plt.grid(alpha=0.3)\n",
         "    plt.tight_layout()\n",
         "    plt.show()\n",
         "\n",
-        "# Save the best model\n",
+        "else:\n",
+        "    print(f\"\\n{best_model_name} does not provide native feature importance.\")\n",
+        "    print(\"→ Consider SHAP or permutation importance for model explainability.\")\n",
+        "\n",
+        "# --------------------------------------------\n",
+        "# Save Final Model for Deployment\n",
+        "# --------------------------------------------\n",
+        "\n",
         "import joblib\n",
+        "\n",
         "joblib.dump(best_model, 'best_diabetes_model.pkl')\n",
         "joblib.dump(scaler, 'scaler.pkl')\n",
-        "print(\"\\n✓ Best model and scaler saved to disk\")\n",
-        "\n"
+        "\n",
+        "print(\"\\n✓ Best model and scaler successfully saved for deployment\")\n",
+        "\n",
+        "# --------------------------------------------\n",
+        "# Sample Inference Pipeline (Deployment Ready)\n",
+        "# --------------------------------------------\n",
+        "\n",
+        "def predict_diabetes_risk(input_data):\n",
+        "    \"\"\"\n",
+        "    input_data: array-like of shape (n_features,)\n",
+        "    returns: predicted class and probability\n",
+        "    \"\"\"\n",
+        "    input_data = np.array(input_data).reshape(1, -1)\n",
+        "    input_scaled = scaler.transform(input_data)\n",
+        "\n",
+        "    prediction = best_model.predict(input_scaled)[0]\n",
+        "    probability = best_model.predict_proba(input_scaled)[0][1]\n",
+        "\n",
+        "    return prediction, probability\n",
+        "\n",
+        "\n",
+        "print(\"\\n✓ Deployment inference function ready\")\n"
       ],
       "metadata": {
         "id": "hm8nuW0BOQ5F",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "804bc51d-6888-4212-99d1-9c6658d8415c"
+        "outputId": "e6b4bb30-a69f-4e64-e799-939896126ebd"
       },
-      "execution_count": 18,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -1624,18 +1672,25 @@
           "text": [
             "\n",
             "============================================================\n",
-            "8. BEST MODEL ANALYSIS\n",
+            "8. BEST MODEL ANALYSIS & DEPLOYMENT\n",
             "============================================================\n",
             "\n",
-            "Best Model: SVM\n",
-            "Accuracy: 0.9860\n",
-            "F1-Score: 0.9286\n",
+            "Best Model Selected: SVM\n",
+            "Accuracy : 0.9860\n",
+            "Recall   : 0.9286\n",
+            "F1-Score : 0.9286\n",
+            "ROC-AUC  : 0.9972\n",
             "\n",
             "Cross-Validation Results for SVM:\n",
-            "Scores: [0.97368421 0.93859649 0.94736842 0.95614035 0.92982456]\n",
-            "Mean CV Accuracy: 0.9491 (+/- 0.0302)\n",
+            "Recall Scores: [0.72727273 0.36363636 0.5        0.66666667 0.5       ]\n",
+            "Mean CV Recall: 0.5515 (+/- 0.2604)\n",
             "\n",
-            "✓ Best model and scaler saved to disk\n"
+            "SVM does not provide native feature importance.\n",
+            "→ Consider SHAP or permutation importance for model explainability.\n",
+            "\n",
+            "✓ Best model and scaler successfully saved for deployment\n",
+            "\n",
+            "✓ Deployment inference function ready\n"
           ]
         }
       ]
@@ -1772,9 +1827,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OjG5TBC4A3j_",
-        "outputId": "348fc793-7940-4287-b2a8-7194abb245e4"
+        "outputId": "06863916-8bed-44ea-b905-de3de592c9b2"
       },
-      "execution_count": 17,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
